fixed table hover jump

--- a/less/tables.less
+++ b/less/tables.less
@@ -53,6 +53,8 @@ table {
                 padding: 3px 10px;
                 border-right: 1px #ddd solid;
                 border-bottom: 1px #ddd solid;
+                border-left: 1px transparent solid;
+                border-top: 1px transparent solid;
                 box-sizing: border-box;
 
                 &.right {
